--- a/_config.yml
+++ b/_config.yml
@@ -324,3 +324,8 @@ defaults:
       comments: # true
       share: true
       related: true
+      
+collections:
+  Projects:
+    output: true
+    permalink: /projects/:name/
