--- a/_config.yml
+++ b/_config.yml
@@ -311,9 +311,7 @@ compress_html:
     envs: development
 
 
-# Defaults
 defaults:
-  # _posts
   - scope:
       path: ""
       type: posts
@@ -321,9 +319,16 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
       share: true
       related: true
+
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
       
 collections:
   Projects:
