--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/Bhupender-Bhupender"
     - label: "Resume"
-      icon: ""fas fa-fw fa-file-pdf""
+      icon: "fas fa-fw fa-file-pdf"
       url: "/assets/files/Bhupender Data Analyst.pdf"
 
 # Site Footer
@@ -329,8 +329,8 @@ defaults:
       layout: single
       author_profile: true
 
-      
 collections:
   Projects:
     output: true
     permalink: /projects/:name/
+
