--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,8 @@ main:
     url: /projects/
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "About"
+    url: /about/
+
+
+
