--- a/_config.yml
+++ b/_config.yml
@@ -136,7 +136,7 @@ author:
       url: "https://github.com/Bhupender-Bhupender"
     - label: "Resume"
       icon: "fas fa-fw fa-file-pdf"
-      url: "https://bhupender-bhupender.github.io/assets/files/Bhupender_Data_Analyst.pdf"
+      url: "https://bhupender-bhupender.github.io/assets/files/Resume.pdf"
       target: "_blank"
 
 
