--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /
   - title: "Projects"
     url: /projects/
+  - title: "Certifications"
+    url: /certifications/
   - title: "Get in Touch"
     url: /contact/
 
