--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ author:
       url: "https://github.com/Bhupender-Bhupender"
     - label: "Resume"
       icon: "fas fa-fw fa-file-pdf"
-      url: "/bhupender.github.io/assets/files/Resume.pdf"
+      url: "/bhupender.github.io/assets/files/Bhupender_JN Data_Analyst.pdf"
       target: "_blank"
 
 
