--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 # Site Author
 author:
   name             : "Bhupender"
-  avatar           : "/assets/images/157235479.jpeg"
+  avatar           : "/assets/images/official 1.jpg"
   bio              : "Data Science & Business Analytics graduate from the University of Warsaw. Passionate about Machine Learning, NLP, and Smart Analytics."
   location         : "Warsaw, Poland"
   # email            : "bb.datasage@gmail.com"
